# woof

./: COLD_START_REPORT.md  Cargo.toml  IO_OPTIMIZATION.md  MEMORY_OPTIMIZATION_COMPLETE.md  P0_MISSING_CORE_RULES.md  P0_PHASE1_COMPLETE.md  P0_PHASE2_COMPLETION.md  P0_PHASE3_COMPLETION.md  PARALLEL_OPTIMIZATION.md  PERFORMANCE_CALCULATION_SSA.md  PRIORITY_MATRIX.md  PRODUCTION_QUICK_START.md  README.md  README_CN.md  RULE_COUNT_ANALYSIS.md  push_to_github.sh  woof.toml
.github/workflows/: release.yml
benches/: cold_start_benchmark.sh  hot_run_benchmark.sh  linter_perf_demo.sh  memory_usage.rs
benchmark/: analyze_woof.sh  compare_parallel.sh  generate_scenarios.py  predict_256core.sh  run_benchmark.sh  run_parallel_comparison.sh  summary.txt  visualize_256core.py  visualize_speedup.py
benchmark/results/: 01_unused_import_woof.txt  02_unused_variable_woof.txt  03_shadow_variable_woof.txt  04_unreachable_code_woof.txt  (+22 more)
docs/: COLD_START_OPTIMIZATION.md  HOT_RUN_REPORT.md  HOT_RUN_WITH_SSA_REPORT.md  IMPLEMENTATION_PLAN.md  MASSIVE_PARALLEL.md  MEMORY_OPTIMIZATION.md  MEMORY_OPTIMIZATION_SUMMARY.md  P0_IMPLEMENTATION_SUMMARY.md  P0_PHASE1_IMPLEMENTATION_PLAN.md  P0_PHASE2_PLAN.md  P0_PHASE3_PLAN.md  P0_RULES_IMPLEMENTED.md  PARALLEL_SPEEDUP_SUMMARY.md  PRODUCTION_READINESS.md  RULES_CATALOG.md  SCALING_REPORT_256CORE.md  SCALING_ROADMAP.md  SSA_IR_CACHE_DESIGN.md
scripts/: README.md  linter_crawler.py  linter_crawler_v2.py
src/: cli.rs  lib.rs  main.rs  main_optimized.rs
testdata/: sample.go  style_issues.go
tests/: integration_test.rs  upgrade_rules_test.rs
(+78 files in other folders)
