[package]
name = "woofmt"
version = "0.1.3"
edition = "2021"
authors = ["Woof Contributors"]
description = "An extremely fast Go linter and code formatter written in Rust"
license = "Apache-2.0"
repository = "https://github.com/GWinfinity/woof"
readme = "README.md"
homepage = "https://github.com/GWinfinity/woof"
keywords = ["go", "golang", "linter", "formatter", "rust"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["benchmark/", "testdata/", "scripts/", "docs/", "benches/", ".github/"]
rust-version = "1.70"

[[bin]]
name = "woof"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Parsing
tree-sitter = "0.25"
tree-sitter-go = "0.25"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system
walkdir = "2.5"
globset = "0.4"
ignore = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Output styling
colored = "2.1"

# Concurrency
crossbeam-channel = "0.5"
num_cpus = "1.16"
rayon = "1.10"

# Other
regex = "1.10"
once_cell = "1.19"
indexmap = "2.2"

# Memory optimization
bumpalo = "3.15"
lru = "0.12"
memmap2 = "0.9"
lazy_static = "1.4"
libc = "0.2.183"

[dev-dependencies]
tempfile = "3.10"
insta = { version = "1.36", features = ["yaml"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
